--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,31 @@
+/* #root {
+  position: relative;
+  width: 2560px;
+  height: 1440px;
+  touch-action: none;
+} */
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  left: 0px;
+  top: 0px;
+
+  background: linear-gradient(
+    180deg,
+    rgba(248, 251, 255, 0.79) -3.85%,
+    rgba(239, 204, 242, 0.553) 27.23%,
+    rgba(202, 158, 255, 0.79) 62.98%,
+    rgba(134, 137, 247, 0.79) 107.53%
+  );
+  backdrop-filter: blur(10.9px);
+
+  touch-action: none;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
