--- a/src/pages/IntroMain.css
+++ b/src/pages/IntroMain.css
@@ -6,6 +6,31 @@
   background-image: url('../assets/images/intro-background.png');
 }
 
+.intro-main.overlay::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 50;
+  opacity: 0;
+  pointer-events: none; /* 클릭 이벤트 차단 방지 */
+  transition: opacity 0.3s ease-in-out 0.1s; /* 0.3초 딜레이 후 페이드인 */
+  animation: fadeInDelay 0.4s ease-in-out forwards; /* 전체 0.6초 애니메이션 */
+}
+
+@keyframes fadeInDelay {
+  0%,
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .video-area {
   display: flex;
   flex-direction: column;
@@ -17,5 +42,23 @@
   width: 851px;
   height: 482px;
   left: 1629px;
-  top: 454px;
+  top: 501px;
+
+  overflow: hidden;
+  border-radius: 32px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.video-area.zoomed {
+  /* 영상확대 */
+  position: absolute;
+  width: 2293px;
+  height: 1300px;
+  left: 134px;
+  top: 70px;
+
+  overflow: hidden;
+  border-radius: 32px;
+  z-index: 100;
 }
